2008-05-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/templates/terminal.wiz,
	plugins/project-wizard/templates/xlib-dock.wiz,
	plugins/project-wizard/templates/wxwin.wiz,
	plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/django.wiz,
	plugins/project-wizard/templates/gnome.wiz,
	plugins/project-wizard/templates/anjuta-plugin.wiz,
	plugins/project-wizard/templates/gtkmm.wiz,
	plugins/project-wizard/templates/python.wiz,
	plugins/project-wizard/templates/cpp.wiz,
	plugins/project-wizard/templates/sdl.wiz,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/minimal.wiz,
	plugins/project-wizard/templates/xlib.wiz,
	plugins/project-wizard/templates/gcj.wiz:
	Fix #533346: Create project in path with spaces fails

2008-05-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta.glade,
	libanjuta/anjuta-preferences.c:
	Fix #531940: Can't change the default project directory

2008-05-14  Rémi Cardona  <remi@gentoo.org>

	Reviewed by Sébastien Granjoux <seb.sfo@free.fr>:
	* plugins/editor/scintilla/Makefile.am,
	libanjuta/Makefile.am:
	Remove useless _DEPENDENCIES

2008-05-13  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/run-program/execute.c:
	Fix #532243: Execute program with whitespace in the project path fails

2008-05-13  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/debug_tree.c:
	Fix #531623: Crash on updating non-existing watch

2008-05-13  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	Reviewed by Sébastien Granjoux <seb.sfo@free.fr>:
	* tagmanager/tm_tag.c:
	* tagmanager/test_tm_buffer.c:
	* plugins/editor/scintilla/LexNsis.cxx:
	* plugins/editor/aneditor.cxx:
	* plugins/file-manager/file-view.c:
	Fixed a bunch of compiler warnings

2008-05-10  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-browser/anjuta-symbol-browser-plugin.glade:
	* plugins/symbol-browser/plugin.c (project_root_added),
	(isymbol_manager_search):
	